[tool.poetry]
name = "lastfm-latest"
version = "0.1.0"
description = ""
authors = ["lukec11 <me@lukec.me>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
